--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-background text-foreground max-w-screen-xl mx-auto px-4  py-5 sm:px-6 lg:px-8;
+    @apply bg-background text-foreground ;
   }
 }
 
